# Final_project_lite

./: .gitignore  CMakeLists.txt  Economic_forecast_timeseries.cpp  README.md  validate.ps1
data/: ICSA.csv  JTSJOL.csv  weekly_data.csv
include/: data_cleaner.hpp  forecast.hpp  matplotlibcpp.h  output_writer.hpp  plot.hpp  utils.hpp
src/: data_cleaner.cpp  forecast.cpp  main.cpp  output_writer.cpp  plot.cpp  utils.cpp
